Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Submission__c/Intake_Submission__c.object-meta.xml
<CustomObject>
    <label>Intake Submission</label>
    <pluralLabel>Intake Submissions</pluralLabel>
    <nameField>
        <label>Submission Number</label>
        <type>AutoNumber</type>
        <displayFormat>ISB-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Generic intake submission record. Used when an Intake Template has no Target Object configured.</description>
</CustomObject>