Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Submission__c/fields/Intake_Template__c.field-meta.xml
<CustomField>
    <fullName>Intake_Template__c</fullName>
    <label>Intake Template</label>
    <type>Lookup</type>
    <referenceTo>Intake_Template__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>