Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Submission__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <label>Template Version</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <inlineHelpText>Version of the Intake Template captured at submit time. Used so historical PDFs render correctly.</inlineHelpText>
</CustomField>